# task_rabbit

./: .gitignore  README.md  docker-compose.yml  package-lock.json
fastapi-demo/: Dockerfile  pyproject.toml
fastapi-demo/app/: init_config.py  main.py
fastapi-demo/app/Models/: pydantic_models.py
fastapi-demo/app/Routes/: AuthRoutes.py
fastapi-demo/app/Utils/DAL/: Tables.py  connector.py
react-demo/: Dockerfile  package-lock.json  package.json
react-demo/src/: App.tsx  AppRouter.tsx  react-app-env.d.ts
react-demo/src/pages/: Login.tsx  Register.tsx
