[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Aravindh Ippili <aravindhippili@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic = "^2.9.2"
sqlalchemy = "^2.0.36"
pg8000 = "^1.31.2"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
